# CI-CD

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
.github/workflows/: dev-ci.yaml
environment/: config-template.ini  configread.py
own_folder/: sample.py  test_sample.py
src/environment/: __init__.py  config-template.ini  configread.py  configwriter.py
src/own_folder/: sample.py  test_sample.py
