[build-system]
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "pipeline-cicd-demo"
dynamic = ["version"]
authors = [
    { name = "PMJ", email = "pmj@gmail.com"},
]
description = "A simple CI/CD example project"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
dependencies = [
    "requests>=2.25.1",
    "flask>=2.0.1",
    "black>=21.9b0",
    "pylint>=2.9.6",
    "isort>=5.8.0",
    "build>=1.2.2.post1",
    "ruff>=0.12.0",
    "pyproject_hooks>=1.2.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
release = ["twine", "build"]
static-code-qa = ["pre-commit"]

[tool.setuptools.dynamic]
version  = {file = "version.txt"}
[tool.setuptools]
include-package-data = true
packages = ["src"]

# [tools.setuptools.package-data]
# package-data = ["own_folder*.csv"]
